--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>FrontEnd with react</title>
+        <title>task1</title>
     </head>
     <body>
 
